@@ -2,6 +2,8 @@ Cascading Change Log
 
 Unreleased
 
+  Added c.o.t.DateFormatter supporting text formatting of time stamps created by c.o.t.DateParser
+
   Fixed bug where in complex assemblies, some Scopes were not resolved
 
   Fixed bug where tap instances were not being inserted before some CoGroup joins if there was a previous Group in the assembly
